# MacShift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.sh
macshift/: __init__.py  __main__.py  cli.py  core.py  intervals.py  mac.py  ui.py
tests/: test_intervals.py  test_mac.py
